# GamutPlotty

./: .gitignore  Cargo.toml  README.md  rust-toolchain
assets/: manifest.json  site.webmanifest  sw.js
color_calc/: Cargo.toml
color_calc/src/: CIELAB.rs  CIELCH.rs  lib.rs
color_calc_core/: Cargo.toml
color_calc_core/src/: conversion.rs  difference.rs  lib.rs  normalization.rs
gamut_plotty/: Cargo.toml  Trunk.toml  index.html
gamut_plotty/src/: app.rs  dummy_state.rs  lib.rs  main.rs
gamut_plotty/src/gamut_data/: cie_d50_10deg_1964.rs  cie_d50_10deg_2015.rs  cie_d50_2deg_1931.rs  cie_d50_2deg_2015.rs  cie_d65_10deg_1964.rs  cie_d65_10deg_2015.rs  cie_d65_2deg_1931.rs  cie_d65_2deg_2015.rs  gen_gamut_boundary_data_modules.py  mod.rs
gamut_plotty_ext/: Cargo.toml
gamut_plotty_ext/src/: lib.rs
gamut_plotty_ext/src/gamut_data/: cie_d50_10deg_1964.rs  cie_d50_10deg_2015.rs  cie_d50_2deg_1931.rs  cie_d50_2deg_2015.rs  cie_d65_10deg_1964.rs  cie_d65_10deg_2015.rs  cie_d65_2deg_1931.rs  cie_d65_2deg_2015.rs  gen_gamut_boundary_data_modules.py
gamut_plotty_godot/: GamutPlotty.gdextension  GamutPlotty.gdextension.uid  project.godot
gamut_plotty_godot/assets/icons/: favicon-16x16.png.import  favicon-192x192.png.import  favicon-32x32.png.import  favicon-512x512.png.import
gamut_plotty_godot/scenes/: axes.tscn  camera.tscn  main.tscn
gamut_plotty_godot/scripts/: camera_3d.gd  camera_3d.gd.uid
gamut_plotty_lib/: Cargo.toml
gamut_plotty_lib/src/gamut_data/: cie_d50_10deg_1964.rs  cie_d50_2deg_1931.rs
