[workspace]
members = [
    "color_calc_core",
    "color_calc",
    "gamut_plotty_lib",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rstest = "0.26.1"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
