[package]
name = "gamut_plotty"
description = "A tool to visualize different color points in a Gamut color space."
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "wasm32-unknown-unknown"]

[dependencies]
color_calc = { path = "../color_calc" }

egui = { version = "0.34.2", features = ["color-hex"] }
egui_extras = { version = "0.34.2", features = ["svg"] }
eframe = { version = "0.34.2", features = ["persistence"] }
log = "0.4.29"
serde = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.71"
web-sys = "0.3.98"              # to access the DOM (to hide the loading text)
