[package]
name = "gamut_plotty_lib"
description = "A tool to visualize different color points in a Gamut color space."
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "wasm32-unknown-unknown"]

[dependencies]
color_calc = { path = "../color_calc" }
serde = { workspace = true }
glam = "0.33.1"
